FEAT: Update Backend for Project Voting Process #DONE
